--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
            <!-- Email -->
             <div class="contact-info-item padd-15">
-              <a href="mailto:techbro8445@gmail.com">
+              <a href="techbro8445@gmail.com">
                 <i class="fas fa-envelope" style="font-size: 48px; color: #D44638;"></i>
               </a>
             </div>
