--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
           </div>
           <h3 class="contact-title padd-15">Do You Have Any Questions?</h3>
-          <h4 class="contact-sub-title padd-15">I'M AT YOUR education</h4>
+<!--           <h4 class="contact-sub-title padd-15">I'M AT YOUR education</h4> -->
           <div class="row">
             <!-- Instagram -->
             <div class="contact-info-item padd-15">
@@ -259,9 +259,9 @@
 
           </div>
           <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-          <h4 class="contact-sub-title padd-15">
+<!--           <h4 class="contact-sub-title padd-15">
             I'M VERY RESPONSIVE TO MESSAGES
-          </h4>
+          </h4> -->
           <!-- Contact form -->
           <div class="row">
             <div class="contact-form padd-15">
